# test_work

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  manage.py  pyproject.toml  pytest.ini
auth_system/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
auth_system/migrations/: 0001_initial.py
auth_system/tests/: conftest.py  test_access_rules.py  test_delete_account.py  test_login.py  test_logout.py  test_profile.py  test_registration.py
test_em/: asgi.py  settings.py  urls.py  wsgi.py
